--- a/src/global/index.css
+++ b/src/global/index.css
@@ -4,7 +4,7 @@ body {
   font-family: sans-serif;
 }
 
-.create-plan-container {  
+.createPlanContainer {  
   display: flex;  
   flex-direction: column;
   align-items: center;
@@ -17,16 +17,16 @@ body {
 }
 
 
-.create-plan-content form {
+.createPlanContent form {
   margin: 80px;
   width: 340px;
   text-align: left;
 }
 
-.create-plan-content form input + input {
+.createPlanContent form input + input {
   margin-top: 5px;
 }
 
-form button {
+.createPlanContent form button {
   margin-top: 20px;
 }
